fix perimeter collapse

--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@ a:active{
 	background-position: center;
 	height: 100vh;
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+	overflow: hidden;
 }
 
 #shortInfo{
